use Groovy 6 idioms for Spark